--- a/Day 7 HTML/project1.html
+++ b/Day 7 HTML/project1.html
@@ -77,13 +77,17 @@
        <section>
         <h2>Projects</h2>
         <ul>
-            <li> Car Parking System</li>
+            <li> 
+                <h3>Car Parking System</h3>
+            </li>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nesciunt.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             <p>Lorem ipsum dolor sit amet.</p>
             <br>
             <br>
-            <li>Friendly Chat AppFriendly</li>
+            <li>
+                <h3>Friendly Chat AppFriendly</h3>
+            </li>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, ullam.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
