--- a/Personal practice/index.html
+++ b/Personal practice/index.html
@@ -35,6 +35,12 @@
         </table>
     </section>
     <br>
+    <section class="social-media">
+        <h2>Sweata Chakraborty</h2>
+            <p>Contact: <a href="https://www.gmail.com">sweata1403@gmail.com</a></p>
+            <p>Linkedin: <a href="https://www.linkedin.com">.linkedin.com/in/sweata-chakraborty/ </a></p>
+            <p>Contact: <a href="https://www.github.com">github.com/Sweata1403</a></p>
+    </section>
     <section class="para2">
         
             <h2>Experience:</h2>
@@ -75,8 +81,20 @@
     
         <h2>Skills:</h2>
         <br>
-        <p class="para5">Adobe Lightroom, Adobe Premiere Pro, Event Planning, Data Analysis, C++, 
-            Python (Programming Language), Analog Signal Processing, Microcontrollers, Microprocessors, Social Media
+        <p class="para5">
+            <ul>
+                <li>Adobe Lightroom</li>
+                <li>Adobe Premiere Pro</li>
+                <li>Event Planning</li>
+                <li>Data Analysis</li>
+                <li>C++</li>
+                <li>Python (Programming Language)</li>
+                <li>Analog Signal Processing</li>
+                <li>Microcontrollers,</li>
+                <li>Microprocessors</li>
+                <li>Social Media</li>
+                <li>Web Development</li>
+            </ul>
         </p>
         <br>
         <footer>
