--- a/Personal practice/index.html
+++ b/Personal practice/index.html
@@ -92,7 +92,10 @@
                 <li>Analog Signal Processing</li>
                 <li>Microcontrollers,</li>
                 <li>Microprocessors</li>
-                <li>Social Media</li>
+                <li>VlSI</li>
+                <li>Verilog HDL</li>
+                <li>Embedded Systems</li>
+                <li>VLSI Testing</li>
                 <li>Web Development</li>
             </ul>
         </p>
