--- a/Parallex Website Effect/index.html
+++ b/Parallex Website Effect/index.html
@@ -12,8 +12,8 @@
     <div id="wrapper">
 
         <div class="container">
-            <img src="background.jpg" class="background">
-            <img src="forground-removebg-preview.png" class="forground">
+            <img src="background.png" class="background">
+            <img src="foreground.png" class="forground">
             <h1>DEVELOPER</h1>
 
         </div>
